# ncr_property_price_estimation

./: .gitignore  LICENSE  Makefile  README.md  cleanup_folders.ps1  environment.yml  fix_locations.py  full_page.html  git_files.txt  preview_data.py  pyproject.toml  requirements_production.txt  test_beautifulsoup.py  test_mb_selectors.py  test_selectors.py
.dvc/: config
RealEstate_ML_Data/: checkpoint.json
data/processed/: ncr_properties_cleaned.parquet.dvc
data/raw/: magicbricks_production.parquet.dvc
ncr_property_price_estimation/: __init__.py  dataset.py  features.py  plots.py
ncr_property_price_estimation/data/: 99acres_scraper.py  BUG_FIXES.md  CAPTCHA_HANDLING.md  CAPTCHA_PREVENTION.md  HTML_EXTRACTION_GUIDE.md  LOCATION_FIX.md  ONE_CITY_SETUP.md  README.md  SCRAPER_README.md  TEST_SCRAPER.md  config.yaml  cookies.json  fix_chrome_version.py  ingestion.py  magicbricks_scraper.py  preprocess.py  schema.py
ncr_property_price_estimation/data/RealEstate_ML_Data/: checkpoint.json
ncr_property_price_estimation/modeling/: predict.py  train.py
notebooks/: 01_eda.ipynb
