[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ncr_property_price_estimation"
version = "0.0.1"
description = "End-to-end data science system for estimating residential property prices in the NCR region, covering data processing, model development, deployment, and lifecycle management."
authors = [
  { name = "Animesh Dwivedi" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"

dependencies = [
    "pandas>=1.5.0",
    "beautifulsoup4>=4.11.0",
    "selenium>=4.0.0",
    "undetected-chromedriver>=3.5.0",
    "pyyaml>=6.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]



[tool.ruff]
line-length = 99
src = ["ncr_property_price_estimation"]
include = ["pyproject.toml", "ncr_property_price_estimation/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["ncr_property_price_estimation"]
force-sort-within-sections = true

